Fixed OverFlow

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,8 @@
     list-style: none !important;
 }
 
-body {
+body,
+html {
     overflow-x: hidden;
 }
 
@@ -137,6 +138,11 @@ header {
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.6);
     border-radius: 50%;
+}
+
+
+.header-content {
+    width: 100%;
 }
 
 
